# src/main/java/com/example/store/controller/ProductController.java
@@ -1,0 +1,38 @@
+package com.example.store.controller;
+
+import com.example.store.dto.ProductDTO;
+import com.example.store.entity.Product;
+import com.example.store.mapper.ProductMapper;
+import com.example.store.service.ProductService;
+
+import lombok.RequiredArgsConstructor;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("/products")
+@RequiredArgsConstructor
+public class ProductController {
+
+    private final ProductService productService;
+    private final ProductMapper productMapper;
+
+    @GetMapping
+    public List<ProductDTO> getProducts() {
+        return productMapper.productsToProductDTOs(productService.getAllProducts());
+    }
+
+    @GetMapping("/{id}")
+    public ProductDTO getProductById(@PathVariable Long id) {
+        return productMapper.productToProductDTO(productService.getProductById(id));
+    }
+
+    @PostMapping
+    @ResponseStatus(HttpStatus.CREATED)
+    public ProductDTO createProduct(@RequestBody Product product) {
+        return productMapper.productToProductDTO(productService.createProduct(product));
+    }
+}
